--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico?" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/dilla.jpg">
+    <meta name="apple-mobile-web-app-status-bar-style" content="translucent black">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,7 +12,7 @@
       content="israpdead &#xbf;"
     />
     <meta name="description" content="rap is dead; these songs suck">
-    <meta name="keywords" content="rap, music, hip hop, rap is dead, ausar, ausar mundra, new jazz, popstar benny, detroit rap, detroit, get money music">
+    <link rel="manifest" href="/manifest.json">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://israpdead.com"/>
