--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico?" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/dilla.jpg">
-    <meta name="apple-mobile-web-app-status-bar-style" content="translucent black">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -38,6 +39,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>is rap dead &#xbf;</title>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
