--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico?" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/dilla.jpg">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -13,7 +10,7 @@
       content="israpdead &#xbf;"
     />
     <meta name="description" content="rap is dead; these songs suck">
-    <link rel="manifest" href="/manifest.json">
+    <meta name="keywords" content="rap, music, hip hop, rap is dead, ausar, ausar mundra, new jazz, popstar benny, detroit rap, detroit, get money music">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://israpdead.com"/>
@@ -39,7 +36,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>is rap dead &#xbf;</title>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
